week1 task modified

--- a/week 1 task.html
+++ b/week 1 task.html
@@ -11,6 +11,8 @@
             <input type="text" id="name" name="name"><br><br>
             <label for="Email">Email</label>
             <input type="Email" id="Email" name="Email"><br><br>
+            <label for="phone number">Phone number</label>
+            <input type="Number" id="Phone number" name="Phone number"><br><br>
             <input type="radio" id="Gender" name="Gender" value="male">
             <label for="male">male</label>
             <input type="radio" id="Gender" name="Gender" value="female">
